assets/component-image-with-text.css
/* ... */
@media screen and (max-width: 749px){
  .image-with-text .mobile-image-second {
    flex-direction: column-reverse;
  }

  .skincare-evolved-heading {
    font-size: 4.4rem;
    line-height: 4.4rem;
  }

  .skincare-evolved-text {
    font-size: 1.7rem;
    line-height: 2.2rem;
  }

  .created-by-dr-heading {
    font-size: 3.6rem;
    line-height: 4rem;
  }

  .created-by-dr-text {
    font-size: 1.6rem;
    line-height: 2.2rem;
  }

  .the-logic-text {
    font-size: 1.8rem;
    line-height: 2.6rem;
  }

  .surface-heading {
    font-size: 4.4rem;
    line-height: 4.4rem;
  }

  .surface-text {
    font-size: 1.8rem;
    line-height: 2.8rem;
  }

  .the-breakdown-heading {
    font-size: 4.4rem;
    line-height: 4.4rem;
  }

  .breakdown-ingredient-title {
    font-size: 2.2rem;
    line-height: 3.8rem;
  }

  .breakdown-ingredient-description {
    font-size: 1.8rem;
    line-height: 2.6rem;
  }
}

.image-with-text__text-item.three-dots-styling {
  display: flex;
}

.image-with-text__text-item.three-dots-styling > div {
  position: relative;
}

.image-with-text__text-item.three-dots-styling .image-with-text__content {
  width: 100%;
}

.three-dots-wrapper {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  background-color: rgb(var(--color-background));
}

.three-dots-wrapper svg {
  fill: rgb(var(--color-foreground));
}

@media screen and (min-width: 750px){
  .image-with-text__text-item.three-dots-styling {
    flex-direction: row;
  }

  .three-dots-wrapper {
    flex-direction: column;
    padding: 0 10rem;
  }
}

@media screen and (max-width: 749px){
  .image-with-text__text-item.three-dots-styling {
    flex-direction: column;
  }

  .three-dots-wrapper {
    flex-direction: row;
    padding: 3rem 0;
  }

  .three-dots-wrapper svg {
    transform: scale(0.5);
  }
}

.breakdown-wrapper {
  display: flex;
  width: 100%;
}

.breakdown-ingredients{
  display: flex;
  flex-direction: column;
}

.breakdown-descriptions div:not(#breakdown_description_1) {
  display: none;
}

#breakdown_title_1 {
  text-decoration: underline;
}

.breakdown-ingredient-title:hover {
  text-decoration: underline !important;
}

.breakdown-ingredient-title {
  font-family: 'VTCDuBois-Light', serif;
}

@media screen and (min-width: 990px){
  .breakdown-wrapper {
    flex-direction: row;
  }

  .breakdown-ingredients {
    min-width: 50%;
  }
}

@media screen and (max-width: 989px){
  .breakdown-wrapper {
    flex-direction: column;
  }

  .breakdown-ingredients {
    margin-bottom: 2rem;
  }

  .image-with-text__media--the-breakdown {
    min-height: 20rem;
  }
}

.breakdown-ingredients {
  font-family: 'VTCDuBois-Bold', serif;
  text-transform: uppercase;
}

.breakdown-ingredient-description {
  font-family: 'Merchant-Italic', serif;
}

.the-logic-tag {
  color: rgb(var(--color-epi-white));
  background-color: rgb(var(--color-epi-black));
  text-transform: uppercase;
  font-size: 1.2rem;
  padding: 0.3rem 1.5rem;
}

.the-logic-tag p {
  position: relative;
  bottom: -2px;
  margin: 0;
}

